// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MessageInput /> renders correctly 1`] = `
<div
  className="MuiInput-root-47 MessageInput-root-45 MuiInput-fullWidth-54 MuiInput-multiline-53"
  onKeyPress={[Function]}
>
  <div
    className="MuiTextarea-root-61"
    style={
      Object {
        "height": 19,
      }
    }
  >
    <textarea
      aria-hidden="true"
      className="MuiTextarea-shadow-63 MuiTextarea-textarea-62"
      readOnly={true}
      rows="1"
      tabIndex={-1}
      value=""
    />
    <textarea
      aria-hidden="true"
      className="MuiTextarea-shadow-63 MuiTextarea-textarea-62"
      defaultValue={undefined}
      readOnly={true}
      rows={1}
      tabIndex={-1}
      value=""
    />
    <textarea
      aria-invalid={undefined}
      aria-required={undefined}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiTextarea-textarea-62 MuiInput-input-55 MuiInput-inputMultiline-58"
      defaultValue={undefined}
      disabled={false}
      id={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder="Type your message…"
      readOnly={undefined}
      required={undefined}
      rows={1}
      type="text"
      value=""
    />
  </div>
  <div
    className="MuiInputAdornment-root-64 MessageInput-sendIcon-46 MuiInputAdornment-positionEnd-66"
  >
    <button
      aria-label="Send message"
      className="MuiButtonBase-root-73 MuiIconButton-root-67"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-72"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-76"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-82"
      />
    </button>
  </div>
</div>
`;

exports[`<MessageInput /> renders correctly disabled 1`] = `
<div
  className="MuiInput-root-47 MessageInput-root-45 MuiInput-disabled-50 MuiInput-fullWidth-54 MuiInput-multiline-53"
  onKeyPress={[Function]}
>
  <div
    className="MuiTextarea-root-61"
    style={
      Object {
        "height": 19,
      }
    }
  >
    <textarea
      aria-hidden="true"
      className="MuiTextarea-shadow-63 MuiTextarea-textarea-62"
      readOnly={true}
      rows="1"
      tabIndex={-1}
      value=""
    />
    <textarea
      aria-hidden="true"
      className="MuiTextarea-shadow-63 MuiTextarea-textarea-62"
      defaultValue={undefined}
      readOnly={true}
      rows={1}
      tabIndex={-1}
      value=""
    />
    <textarea
      aria-invalid={undefined}
      aria-required={undefined}
      autoComplete={undefined}
      autoFocus={undefined}
      className="MuiTextarea-textarea-62 MuiInput-input-55 MuiInput-inputDisabled-57 MuiInput-inputMultiline-58"
      defaultValue={undefined}
      disabled={true}
      id={undefined}
      name={undefined}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      onKeyDown={undefined}
      onKeyUp={undefined}
      placeholder="Type your message…"
      readOnly={undefined}
      required={undefined}
      rows={1}
      type="text"
      value=""
    />
  </div>
  <div
    className="MuiInputAdornment-root-64 MessageInput-sendIcon-46 MuiInputAdornment-positionEnd-66"
  >
    <button
      aria-label="Send message"
      className="MuiButtonBase-root-73 MuiIconButton-root-67"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex="0"
      type="button"
    >
      <span
        className="MuiIconButton-label-72"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-76"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"
          />
        </svg>
      </span>
      <span
        className="MuiTouchRipple-root-82"
      />
    </button>
  </div>
</div>
`;
